--- a/config/database.yml
+++ b/config/database.yml
@@ -8,17 +8,22 @@ default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  host: localhost
 
 development:
   <<: *default
-  database: db/development.postgresql
+  database: postgres
+  username: postgres
+  password: 123
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.postgresql
+  database: postgres
+  username: postgres
+  password: 123
 
 production:
   <<: *default
